# intersection-of-2-triangles

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TPP_LICENSE  conanfile.txt  imgui.ini
.github/workflows/: ci.yml  debug.yml
src/Common/: Application.cpp  Application.hpp  CMakeLists.txt
src/Entrypoint/: CMakeLists.txt  main.cpp
src/Graphics/: CMakeLists.txt  GraphicsComponent.cpp  GraphicsComponent.hpp
src/Input/: CMakeLists.txt  GraphicsInputComponent.cpp  GraphicsInputComponent.hpp  InputComponent.cpp  InputComponent.hpp
src/Math/: CMakeLists.txt  MathComponent.cpp  MathComponent.hpp
tests/: CMakeLists.txt  test.cpp
vendors/glad/: CMakeLists.txt
vendors/glad/include/KHR/: khrplatform.h
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
vendors/imgui/: CMakeLists.txt
